--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,10 @@
     padding: 0;
 }
 
-.banner{
-    background-color: #16171c;
-    text-align: center;
+body{
+    background: #fefefe;
 }
 
-.banner p{
-    font-family: "Myriad Pro", sans-serif;
-    font-weight: bolder;
-    color: white;
-    padding: 10px;
-}
-
-/*.underline{*/
-    /*width: 40%;*/
-    /*margin: auto;*/
-    /*border-bottom: 1px solid #473840;*/
-/*}*/
 
 @keyframes rubberBand {
     0% {transform: scale(1);}
@@ -135,7 +122,7 @@
 
 #about-section p{
     font-family: "Myriad Pro", sans-serif;
-    color: #949c89;
+    color: #a2a2a2;
     line-height: 1.5;
 }
 
@@ -144,6 +131,7 @@
 /* THE END OF THE ABOUT PAGE AND THE BEGINNING OF THE PORT SECTION */
 
 #portfolio-section{
+    background-color: #ffffff;
     padding: 6%;
     width: 70%;
     margin-left: auto;
@@ -170,7 +158,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 10px 10px 40px -5px lightslategrey;
+    box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
     transition: .5s ease all;
 }
 
@@ -190,6 +178,7 @@
 /* THIS IS MY TEST LAND */
 
 .project-image {
+    transition: .25s ease all;
     border: 0;
     box-sizing: border-box;
     position: relative;
@@ -203,9 +192,10 @@
     height: 100%;
 }
 
-.draw {
-    transition: color 0.25s;
+.draw{
+    transition: .25s ease all;
 }
+
 .draw::before, .draw::after {
     border: 3px solid transparent;
     width: 0;
@@ -272,7 +262,7 @@
 
 .project-section p{
     font-family: "Myriad Pro", sans-serif;
-    color: #949c89;
+    color: #a2a2a2;
     line-height: 1.5;
 }
 
@@ -331,7 +321,7 @@
 
 #contact-section p{
     font-family: "Myriad Pro", sans-serif;
-    color: #949c89;
+    color: #a2a2a2;
     line-height: 1.5;
 }
 
@@ -344,33 +334,82 @@
 
 
 .footer{
-    border-top-left-radius: 100% 20px;
-    border-top-right-radius: 100% 20px;
-    text-align: center;
-    max-width: 70%;
+    justify-content: center;
+    z-index: 100;
+    display: flex;
     width: 100%;
-    margin-top: 2%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #727c67;
-    opacity: .7;
-    box-shadow: inset 0px 0px 20px -4px rgba(0,0,0,0.75);
+    flex-direction: row;
+    background-color: #f3f3f3;
+    box-shadow: 0 0 50px -15px darkgray;
+    border-top: 1px solid lightgrey;
+    margin-top: 3%;
 }
 
+.footer li{
+    list-style: none;
+    padding: 30px;
+    color: #16171c;
+    font-family: "Shree Devanagari 714", sans-serif;
+    font-weight: bolder;
+    opacity: 0.7;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.footer li:hover{
+    opacity: 1;
+    transition: .3s ease;
+}
 .footer img{
     padding: 2%;
-    max-height: 40px;
-    max-width: 40px;
+    height: 55px;
+    width: 55px;
 }
+
+.footer img:hover {
+    transition: 0.70s;
+    -webkit-transition: 0.70s;
+    -moz-transition: 0.70s;
+    -ms-transition: 0.70s;
+    -o-transition: 0.70s;
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+
+.phone-hover, .email-hover, .facebook-hover{
+    font-family: "Shree Devanagari 714", sans-serif;
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    display: none;
+    transition: 1s ease all;
+}
+
+.phone-hover-click, .email-hover-click, .facebook-hover-click{
+    font-size: 12px;
+    margin-top: 3%;
+    transition: 1s ease all;
+    display: block;
+    width: 200px;
+    height: 100px;
+    opacity: 1;
+}
+
+/*.phone-hover, .email-hover, .facebook-hover{*/
+    /*transition: 1s ease all;*/
+    /*display: block;*/
+    /*width: 200px;*/
+    /*height: 100px;*/
+    /*opacity: 1;*/
+/*}*/
 
 /* TABLET STYLING */
 @media screen and (max-width: 900px){
     #contact-section{
         margin-bottom: 50px;
-    }
-    .footer img{
-        max-width: 25px;
-        max-height: 25px;
     }
 }
 
@@ -384,12 +423,13 @@
 @media screen and (max-width: 600px){
     #title-section{
         height: 60vh;
-        background-image: url("../images/plant-mobile-01.svg");
+        background-image: url("../images/plant-mobile-01-01.svg");
     }
     .navigation{
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 20px;
+        /*flex-direction: column;*/
+        /*text-align: center;*/
+        /*padding-bottom: 20px;*/
+        display: none;
     }
     .navigation p{
         padding: 10px;
@@ -400,14 +440,7 @@
     #personal-section div{
         max-width: 70%;
     }
-    .footer{
-        border-top-left-radius: 100% 20px;
-        border-top-right-radius: 100% 20px;
-        max-width: 100%;
-    }
     .footer img{
-        max-width: 45px;
-        max-height: 45px;
         margin-bottom: 2%;
         margin-top: 2%;
     }
